server/src/test/resources/envoy/ads.v2.config.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
dynamic_resources:
  ads_config:
    api_type: GRPC
    grpc_services:
      envoy_grpc:
        cluster_name: ads_cluster
  cds_config:
    ads: {}
  lds_config:
    ads: {}
node:
  cluster: test-cluster
  id: test-id
static_resources:
  clusters:
  - connect_timeout: 1s
    load_assignment:
      cluster_name: ads_server
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: HOST_IP
                  port_value: HOST_PORT
    http2_protocol_options: {}
    name: ads_cluster
