server/src/test/resources/envoy/xds.config.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
dynamic_resources:
  cds_config:
    api_config_source:
      api_type: GRPC
      cluster_names:
      - xds_cluster
  lds_config:
    api_config_source:
      api_type: GRPC
      cluster_names:
      - xds_cluster
node:
  cluster: test-cluster
  id: test-id
static_resources:
  clusters:
  - connect_timeout: 1s
    hosts:
    - socket_address:
        address: HOST_IP
        port_value: HOST_PORT
    http2_protocol_options: {}
    name: xds_cluster
